Archive2/f8/79eb98aa5b8a47/output
main.cpp: In function 'int main()':
main.cpp:98:28: error: wrong number of template arguments (0, should be 1)
     auto cb = std::greater<>;
                            ^
In file included from /usr/include/c++/4.8/functional:49:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_function.h:222:12: error: provided for 'template<class _Tp> struct std::greater'
     struct greater : public binary_function<_Tp, _Tp, bool>
            ^
